--- a/Project2.vcxproj
+++ b/Project2.vcxproj
@@ -22,7 +22,7 @@
     <VCProjectVersion>15.0</VCProjectVersion>
     <ProjectGuid>{758CACE0-C08E-43D1-BFE5-1D527F116EAB}</ProjectGuid>
     <RootNamespace>Project2</RootNamespace>
-    <WindowsTargetPlatformVersion>10.0.17134.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0.17763.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -76,10 +76,10 @@
     <IncludePath>D:\Work_software\VS_2017\vs_2017_Project\display\display;D:\Work_software\VS_2017\vs_2017_Project\Project2;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <IncludePath>D:\Work_software\VS_2017\vs_2017_Project\display\display;D:\Work_software\VS_2017\vs_2017_Project\ORB_test\Depends;D:\Work_software\VS_2017\vs_2017_Project\Project2;$(IncludePath)</IncludePath>
+    <IncludePath>C:\Program Files (x86)\Windows Kits\10\Include\10.0.17763.0\ucrt;D:\ZZH\Mylib\Routine-master\include;D:\ZZH\VS_2017\HelloWorld;D:\Work_software\VS_2017\vs_2017_Project\display\display;D:\Work_software\VS_2017\vs_2017_Project\ORB_test\Depends;D:\Work_software\VS_2017\vs_2017_Project\Project2;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
-    <IncludePath>D:\Work_software\VS_2017\vs_2017_Project\display\display;D:\Work_software\VS_2017\vs_2017_Project\Project2;$(IncludePath)</IncludePath>
+    <IncludePath>C:\Program Files (x86)\Windows Kits\10\Include\10.0.17763.0\ucrt;D:\ZZH\Mylib\Routine-master\include;D:\ZZH\VS_2017\HelloWorld;D:\Work_software\VS_2017\vs_2017_Project\display\display;D:\Work_software\VS_2017\vs_2017_Project\Project2;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
